--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -124,6 +124,7 @@
     <DCCReference Include="MapLayers\u_MapTileLayerBasic.pas" />
     <DCCReference Include="MapLayers\u_MiniMapLayer.pas" />
     <DCCReference Include="MapLayers\u_SelectionLayer.pas" />
+    <DCCReference Include="MapLayers\u_SelectionLayerNew.pas" />
     <DCCReference Include="MapLayers\u_WindowLayerBasic.pas" />
     <DCCReference Include="RegionProcess\fr_ExportAUX.pas">
       <Form>frExportAUX</Form>
