--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -104,6 +104,7 @@
     <DCCReference Include="i_ITileDownlodSession.pas" />
     <DCCReference Include="i_ITileFileNameGenerator.pas" />
     <DCCReference Include="i_ITileFileNameGeneratorsList.pas" />
+    <DCCReference Include="i_ITileInfoBasic.pas" />
     <DCCReference Include="i_ITileIterator.pas" />
     <DCCReference Include="i_ITileObjCache.pas" />
     <DCCReference Include="i_MapTypeIconsList.pas" />
@@ -381,6 +382,7 @@
     <DCCReference Include="u_TileFileNameGM2.pas" />
     <DCCReference Include="u_TileFileNameGMV.pas" />
     <DCCReference Include="u_TileFileNameSAS.pas" />
+    <DCCReference Include="u_TileInfoBasic.pas" />
     <DCCReference Include="u_TileIteratorAbstract.pas" />
     <DCCReference Include="u_TileIteratorByRect.pas" />
     <DCCReference Include="u_TileIteratorSpiralByRect.pas" />
