Вынес объявление константы с версией программы в отдельный юнит.

--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -47,6 +47,7 @@
     <DCCReference Include="BitmapTileSaveLoad\u_BitmapTileVampyreLoader.pas" />
     <DCCReference Include="BitmapTileSaveLoad\u_BitmapTileVampyreSaver.pas" />
     <DCCReference Include="bmpUtil.pas" />
+    <DCCReference Include="c_SasVersion.pas" />
     <DCCReference Include="dm_MarksDb.pas">
       <Form>DMMarksDb</Form>
       <DesignClass>TDataModule</DesignClass>
