Еще один новый класс для работы с провайдерами конфига

--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -306,6 +306,7 @@
     <DCCReference Include="u_ConfigDataProviderByIniFile.pas" />
     <DCCReference Include="u_ConfigDataProviderByIniFileSection.pas" />
     <DCCReference Include="u_ConfigDataProviderByKaZip.pas" />
+    <DCCReference Include="u_ConfigDataProviderVirtualWithSubItem.pas" />
     <DCCReference Include="u_ConfigDataProviderWithLocal.pas" />
     <DCCReference Include="u_ConfigDataWriteProviderByIniFile.pas" />
     <DCCReference Include="u_ConfigDataWriteProviderByIniFileSection.pas" />
