Еще один юнит для упрощения создания конфиг провайдера для чтения zmp

--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -310,6 +310,7 @@
     <DCCReference Include="u_ConfigDataProviderWithLocal.pas" />
     <DCCReference Include="u_ConfigDataProviderWithReplacedSubItem.pas" />
     <DCCReference Include="u_ConfigDataProviderWithUseDepreciated.pas" />
+    <DCCReference Include="u_ConfigDataProviderZmpComplex.pas" />
     <DCCReference Include="u_ConfigDataWriteProviderByIniFile.pas" />
     <DCCReference Include="u_ConfigDataWriteProviderByIniFileSection.pas" />
     <DCCReference Include="u_ContentConverterBase.pas" />
