Еще пара новых классов

--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -96,6 +96,7 @@
     <DCCReference Include="i_IKmlInfoSimpleLoader.pas" />
     <DCCReference Include="i_ILanguageManager.pas" />
     <DCCReference Include="i_IListOfObjectsWithTTL.pas" />
+    <DCCReference Include="i_ILocalCoordConverter.pas" />
     <DCCReference Include="i_ILogForTaskThread.pas" />
     <DCCReference Include="i_ILogSimple.pas" />
     <DCCReference Include="i_IMapCalibration.pas" />
@@ -370,6 +371,7 @@
     <DCCReference Include="u_LanguagesEx.pas" />
     <DCCReference Include="u_LastSelectionInfo.pas" />
     <DCCReference Include="u_ListOfObjectsWithTTL.pas" />
+    <DCCReference Include="u_LocalCoordConverter.pas" />
     <DCCReference Include="u_LogForTaskThread.pas" />
     <DCCReference Include="u_MapCalibrationDat.pas" />
     <DCCReference Include="u_MapCalibrationKml.pas" />
