--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -306,6 +306,7 @@
     <DCCReference Include="UTimeZones.pas" />
     <DCCReference Include="UYaMobile.pas" />
     <DCCReference Include="u_ActiveMapConfig.pas" />
+    <DCCReference Include="u_ActiveMapSingleAbstract.pas" />
     <DCCReference Include="u_ActiveMapWithHybrConfig.pas" />
     <DCCReference Include="u_AntiBanStuped.pas" />
     <DCCReference Include="u_BitmapTypeExtManagerSimple.pas" />
