Еще пара новых классов

--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -408,6 +408,7 @@
     <DCCReference Include="u_MemFileCache.pas" />
     <DCCReference Include="u_MiniMapMenuItemsFactory.pas" />
     <DCCReference Include="u_NotifyEventListener.pas" />
+    <DCCReference Include="u_NotifyWithGUIDEvent.pas" />
     <DCCReference Include="u_PoolElement.pas" />
     <DCCReference Include="u_PoolOfObjectsSimple.pas" />
     <DCCReference Include="u_PosChangeListener.pas" />
