Почему-то не был добавлен файл в dproj

--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -219,6 +219,7 @@
     <DCCReference Include="src\CPDrv.pas" />
     <DCCReference Include="src\cUnicode.pas" />
     <DCCReference Include="src\cUnicodeChar.pas" />
+    <DCCReference Include="src\c_ZeroGUID.pas" />
     <DCCReference Include="src\ECWReader.pas" />
     <DCCReference Include="src\ECWwriter.pas" />
     <DCCReference Include="src\gnugettext.pas" />
