--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -389,6 +389,7 @@
     <DCCReference Include="u_MainActiveMap.pas" />
     <DCCReference Include="u_MainMapsConfig.pas" />
     <DCCReference Include="u_MainWindowPositionConfig.pas" />
+    <DCCReference Include="u_MainWindowToolbarsLock.pas" />
     <DCCReference Include="u_MapCalibrationDat.pas" />
     <DCCReference Include="u_MapCalibrationKml.pas" />
     <DCCReference Include="u_MapCalibrationListBasic.pas" />
