Ковыряю базовые классы слоев. Опять все поломал.

--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -155,6 +155,7 @@
     <DCCReference Include="MapLayers\u_MiniMapLayer.pas" />
     <DCCReference Include="MapLayers\u_SelectionLayer.pas" />
     <DCCReference Include="MapLayers\u_WindowLayerBasic.pas" />
+    <DCCReference Include="MapLayers\u_WindowLayerWithPos.pas" />
     <DCCReference Include="RegionProcess\fr_ExportAUX.pas">
       <Form>frExportAUX</Form>
       <DesignClass>TFrame</DesignClass>
